fix: container width on small screen

--- a/src/components/styling/authorCard.module.scss
+++ b/src/components/styling/authorCard.module.scss
@@ -4,8 +4,8 @@
 
 .avatar {
     border-radius: 50%;
-    min-width: 8vw;
-    max-width: 15vw;
+    min-width: 4rem;
+    max-width: 25vw;
     /* Possibly container properties?
     color: #2e3440;
     text-align: center;
