--- a/src/components/styling/globalStyles.scss
+++ b/src/components/styling/globalStyles.scss
@@ -39,6 +39,19 @@ $box-shadow: 0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0,
     }
 }
 
+main {
+    @media screen and (min-width: 1216px) {
+        max-width: 1152px;
+    }
+    @media screen and (min-width: 1024px) {
+        max-width: 960px;
+    }
+    flex-grow: 1;
+    margin: 0 auto;
+    position: relative;
+    width: auto;
+}
+
 a {
     color: $primary;
     cursor: pointer;
